[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68", "wheel"]

[project]
name = "openfisca-uk-energy"
version = "0.0.1"
description = "OpenFisca Rules-as-Code model for UK energy (example)."
readme = "README.md"
keywords = ["energy", "balancing-mechanism", "rules-as-code", "openfisca", "simulation"]
# If you're on Python 3.13 today, change this to ">=3.9" temporarily.
requires-python = ">=3.9,<3.12"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "openfisca-core[web-api]>=43",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pyyaml>=6",
    "isort>=5.13.2,<6",
    "ruff>=0.6.9,<1",
    "ruff-lsp>=0.0.57,<1",
    "yamllint>=1.35.1",
]

[project.urls]
Homepage = "https://github.com/your-org/openfisca-uk-energy"
Repository = "https://github.com/your-org/openfisca-uk-energy"
Documentation = "https://openfisca.org/doc"

# ---- Packaging: pick up ONLY your package and include YAML assets ----
[tool.setuptools]
packages = ["openfisca_uk_energy"]

[tool.setuptools.package-data]
openfisca_uk_energy = [
  "parameters/**/*.yml", "parameters/**/*.yaml",
  "tests/**/*.yml", "tests/**/*.yaml"
]

# ---- Ruff (lint) ----
[tool.ruff]
target-version = "py39"
format.docstring-code-line-length = 72
format.docstring-code-format = true
lint.select = ["ALL"]
lint.ignore = [
    "ANN", "COM812", "D101", "D104", "I001", "ISC001",
    "N801", "N805", "N806", "PLR2004", "PTH100", "PTH118",
    "PTH120", "PTH123",
]
lint.pydocstyle.convention = "google"

# ---- isort ----
[tool.isort]
case_sensitive = true
combine_as_imports = true
group_by_package = true
honor_noqa = true
include_trailing_comma = true
known_first_party = ["openfisca_uk_energy"]
known_openfisca = ["openfisca_core"]
profile = "black"
py_version = 39
sections = [
    "FUTURE",
    "TYPING",
    "TYPES",
    "STDLIB",
    "THIRDPARTY",
    "OPENFISCA",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

# ---- Tests ----
[tool.pytest.ini_options]
addopts = "--exitfirst --showlocals --doctest-modules --disable-warnings --import-mode importlib"
testpaths = ["openfisca_uk_energy/tests"]
python_files = "**/*.py"

# (Optional) Tox, if you want it
[tool.tox]
requires = ["tox>=4.20"]
env_list = ["py39", "py310", "py311", "lint"]

[tool.tox.env_run_base]
allowlist_externals = ["make"]
commands = [["make", "test"]]
commands_pre = [
    ["pip", "install", "--find-links", ".", "openfisca-uk-energy[dev]"],
]

[tool.tox.env.lint]
basepython = ["py39"]
allowlist_externals = ["make"]
commands = [["make", "lint"]]
commands_pre = [
    ["pip", "install", "--find-links", ".", "openfisca-uk-energy[dev]"],
]
